--- a/analise_de_dados.ipynb
+++ b/analise_de_dados.ipynb
@@ -8,8 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1i1j_l6HVcGWJnqGGwzwy19JUnsA_Gyah",
-      "authorship_tag": "ABX9TyOIEdlhAvLXMOhMDvy7Sjk5",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNCASRgSD+wB+AgZAey91oX"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/matheusamorim/notebook/blob/master/analise_de_dados.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -50,40 +39,6 @@
         "import glob\n"
       ],
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HpxkWWVVhrtL",
-        "outputId": "69430173-2932-4d89-acbb-328e068829f5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "! ls\n"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "drive  sample_data\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zXy0APnRiQqT"
-      },
-      "source": [
-        "!cd sample_data"
-      ],
-      "execution_count": 13,
       "outputs": []
     },
     {
